# HTTP

./: CMakeLists.txt
doc/: FSdesign.md  Log_design.txt  design.md
src/: CMakeLists.txt  config_manager.h  listener.h  logger.h  main.cc  worker.cc  worker.h
src/network/: tcp_wrap.h
src/protocol/: headopt.h  protocol.h  request.h  request_parser.h  response.h  response_parser.h
src/system/: fd_wrap.h  file_descriptor.h  file_io_stream.h  filesystem.h  fs_wrap.h  io_stream.h  storage_map.h
src/test/: test_fd.cc  test_fs.cc
